# cylon

./: .gitignore  .gitmodules  build.py  build.sh
.github/workflows/: c-cpp.yml  conda-actions.yml  conda-cpp-redis.yml  conda-cpp.yml  macos.yml  windows.yml
aws/scripts/: Join_Weak_Scaling_round2.ipynb  S3_run_script.py  cylon_scaling.py  cylon_scaling2.py  cylon_scaling_fargate.py  cylon_scaling_fargate2.py  cylon_scaling_lambda.py  fmi-test.py  fmi_scaling_lambda.py  lambda_entry1.py  network-scan.sh  runCyloninLambda.sh  runCyloninLambdaSimulator.sh
aws/scripts/ecs/: cylon-ucc-ucx-redis-fargate-16_28_145000000-16Node-task-strong.json
aws/scripts/rendezvous/: Dockerfile  package.json
aws/scripts/rendezvous/src/: server.ts
aws/scripts/scaling/: scaling.py
aws/scripts/scaling/cylonlib/: cylon_scaling.py  cylon_scaling_lambda.py
aws/scripts/zeromq/: Dockerfile  zeroMqTest.ipynb
aws/scripts/zeromq/lambda/: Dockerfile
aws/scripts/zeromq/src/: server.ts
conda/environments/: cylon.yml  cylon_MacOS.yml  cylon_NoUCX.yml  cylon_NoUCXArm64.yml  cylon_rivanna_1.yml  cylon_rivanna_2.yml  cylon_rivanna_NoUCX.yml  cylon_rivanna_NoUCX2.yml  fmi.yml  gcylon.yml  gcylon_cuda13.yml  windows.yml
cpp/: CMakeLists.txt
cpp/CMake/Modules/: ConfigureArrow.cmake  SetupCxxFlags.cmake
cpp/src/cylon/: CMakeLists.txt
cpp/src/cylon/arrow/: arrow_types.cpp  (+3 more)
cpp/src/examples/: CMakeLists.txt  fmi_example.cpp  indexing_example.cpp
cpp/src/examples/gcylon/: CMakeLists.txt
cpp/src/gcylon/: CMakeLists.txt  gcylon_config.hpp  gtable_api.cpp  gtable_api.hpp  gtable_api_chunked.cpp
cpp/src/gcylon/all2all/: cudf_all_to_all.cpp
cpp/src/gcylon/net/: cudf_serialize.cpp
cpp/src/gcylon/sorting/: deserialize.cpp  sorting.cpp
cpp/src/gcylon/utils/: construct.hpp  util.cpp
cpp/test/: comparator_test.cpp  sorting_test.cpp  test_arrow_utils.hpp
docker/aws/ecs/: Dockerfile
docker/aws/ecs-fargate/: Dockerfile
docker/aws/ecs-fargate-fmi/: Dockerfile
docker/aws/lambda/: Dockerfile  Dockerfile_arm64  lambda_entry1.py  lambda_entry2.py
docker/gcylon/: Dockerfile  docker-compose.yml
docker/opentelemetry/: dockerfile
docker/rivanna/: Dockerfile  Dockerfile2
python/pycylon/: setup.py
python/pycylon/pycylon/: distributed_io.py
python/pycylon/test/: test_index.py
rust/: Cargo.toml  DISTRIBUTED_OPERATIONS_ROADMAP.md  build.rs
rust/docs/: GCYLON_CHUNKED_IMPLEMENTATION.md  LIBFABRIC_COMMUNICATOR_DESIGN.md  UNIFIED_CHECKPOINTING_DESIGN.md
rust/examples/: compute_example.rs  create_test_parquet.rs  demo_join.rs  dist_sort_example.rs  distributed_join_all_types.rs  distributed_join_mpi.rs  distributed_set_ops_mpi.rs  fmi_example.rs  gpu_join.rs  gpu_shuffle.rs  gpu_sort.rs  groupby_example.rs  groupby_perf.rs  intersect_example.rs  join_example.rs  mpi_hello.rs  multi_idx_join_example.rs  multicolumn_sorting_example.rs  parquet_join_example.rs  parquet_union_example.rs  project_example.rs  redis_ucc_ucx_example.rs  select_example.rs  shuffle_mpi.rs  slice_example.rs  sorting_example.rs  subtract_example.rs  table_from_vectors_example.rs  ucc_operators_example.rs  ucx_join_example.rs  union_example.rs  unique_example.rs
rust/scripts/: run_with_session.sh
rust/src/: arrow.rs  compute.rs  ctx.rs  data_types.rs  error.rs  groupby.rs  indexing.rs  io.rs  join.rs  lib.rs  net.rs  ops.rs  row.rs  scalar.rs  table.rs  util.rs
rust/src/arrow/: arrow_all_to_all.rs  arrow_comparator.rs  arrow_kernels.rs  arrow_partition_kernels.rs  arrow_types.rs  mod.rs
rust/src/checkpoint/: async_io.rs  compression.rs  config.rs  coordinator.rs  incremental.rs  manager.rs  mod.rs  serializer.rs  storage.rs  traits.rs  trigger.rs  types.rs
rust/src/compute/: aggregate_kernels.rs  aggregates.rs  mod.rs  scalar_aggregate.rs
rust/src/gpu/: config.rs  context.rs  ffi.rs  mod.rs  table.rs
rust/src/groupby/: groupby.rs  hash_groupby.rs  mod.rs
rust/src/indexing/: index.rs  mod.rs
rust/src/io/: arrow_io.rs  csv.rs  parquet_config.rs
rust/src/join/: config.rs  hash_join.rs  mod.rs  sort_join.rs  utils.rs
rust/src/mapreduce/: kernels.rs  mod.rs
rust/src/net/: buffer.rs  channel.rs  comm_config.rs  comm_operations.rs  communicator.rs  request.rs  serialize.rs
rust/src/net/fmi/: channel.rs  common.rs  communicator.rs  cylon_channel.rs  cylon_communicator.rs  cylon_operations.rs  direct.rs  fault_tolerance.rs  mod.rs  peer_to_peer.rs  tcpunch.rs  types.rs
rust/src/net/libfabric/: address_vector.rs  channel.rs  communicator.rs  context.rs  endpoint.rs  error.rs  libfabric_sys.rs  mod.rs  oob.rs  operations.rs
rust/src/net/mpi/: channel.rs  communicator.rs  config.rs  mod.rs  operations.rs  table_bcast.rs
rust/src/net/ops/: all_to_all.rs  base_ops.rs  bcast.rs  gather.rs  mod.rs
rust/src/net/ucc/: communicator.rs  mod.rs  operations.rs  ucc_sys.rs
rust/src/net/ucx/: channel.rs  communicator.rs  mod.rs  oob_context.rs  operations.rs  redis_oob.rs  ucx_sys.rs
rust/src/ops/: distributed_join.rs  distributed_set_ops.rs  distributed_sort.rs  mod.rs  partition.rs  shuffle.rs
rust/src/partition/: hash_partition.rs  mod.rs
rust/src/table/: column.rs
rust/src/util/: arrow_utils.rs  logging.rs  mod.rs  to_string.rs  uuid.rs
rust/tests/: add_column_test.rs  aggregate_test.rs  arrow_all_to_all_multi_batch_test.rs  arrow_all_to_all_test.rs  base_ops_test.rs  checkpoint_test.rs  collective_ops_test.rs  csv_test.rs  cylon_context_test.rs  datafusion_test.rs  distributed_join_test.rs  distributed_sort_test.rs  equals_test.rs  fault_tolerance_test.rs  fmi_test.rs  gather_test.rs  groupby_test.rs  hash_partition_test.rs  index_test.rs  intersect_test.rs  join_test.rs  libfabric_channel_test.rs  libfabric_communicator_test.rs  libfabric_config_test.rs  libfabric_sys_test.rs  merge_sorted_table_test.rs  merge_test.rs  mpi_basic_test.rs  mpi_column_scalar_test.rs  parquet_test.rs  partition_test.rs  polars_test.rs  print_test.rs  project_test.rs  select_test.rs  serialize_test.rs  set_operations_test.rs  shuffle_arrow_test.rs  shuffle_test.rs  slice_test.rs  (+12 more)
summit/scripts/: cylon_scaling.py
(+88 files in other folders)
