[package]
name = "cylon"
version = "0.7.0"
edition = "2021"
rust-version = "1.70"
authors = ["Cylon Data Team"]
description = "Fast, scalable distributed memory data parallel library for processing structured data"
license = "Apache-2.0"
repository = "https://github.com/cylondata/cylon"
readme = "README.md"
keywords = ["dataframe", "distributed", "arrow", "mpi", "data-processing"]
categories = ["science", "database"]

[dependencies]
# Arrow ecosystem
arrow = "56.2.0"
arrow-array = "56.2.0"
arrow-buffer = "56.2.0"
arrow-cast = "56.2.0"
arrow-csv = "56.2.0"
arrow-data = "56.2.0"
arrow-ipc = "56.2.0"
arrow-json = "56.2.0"
arrow-ord = "56.2.0"
arrow-row = "56.2.0"
arrow-schema = "56.2.0"
arrow-select = "56.2.0"
parquet = { version = "56.2.0", optional = true }

# Async and parallel processing
tokio = { version = "1.47", features = ["full"] }
rayon = "1.11"
futures = "0.3"
async-trait = "0.1"

# Networking and communication
mpi = { version = "0.8", optional = true }
mpi-sys = { version = "0.2", optional = true }
gloo = { version = "0.4", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4"] }
log = "0.4"
env_logger = "0.11"

# Hashing and collections
ahash = "0.8"
hashbrown = "0.14"

# Numeric computation
num-traits = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[features]
default = ["parquet"]
mpi = ["dep:mpi", "dep:mpi-sys"]
gloo = ["dep:gloo"]
parquet = ["dep:parquet"]
redis = []
ucx = []

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1